@@ -1,5 +1,8 @@
 2004-10-29  Han-Wen Nienhuys  <hanwen@xs4all.nl>
 
+	* site/about/pubs.html (href): add computer totaal scan. (Thanks,
+	Mars!)
+
 	* site/graphics/: new directory. Edit SVG images with inkscape
 	0.39
 
